<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fRoomCreate_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|start"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fRoomCreate_textView_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/allerta"
        android:text="@string/title_createRoom"
        android:textAlignment="center"
        android:textSize="24sp" />

    <FrameLayout
        android:id="@+id/fRoomCreate_layout_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/fRoomCreate_imageView_userIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_launcher_background"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="4dp" />

        <ImageView
            android:id="@+id/fRoomCreate_imageView_changeImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/edit_image"
            android:tint="#5F5F5F"
            app:srcCompat="@drawable/ic_perm_media_black_24dp" />

    </FrameLayout>

    <EditText
        android:id="@+id/fRoomCreate_editText_roomname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/background_login_selectbutton"
        android:backgroundTint="#ffffff"
        android:ems="10"
        android:fontFamily="@font/allerta"
        android:hint="@string/type_roomName"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="15"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp" />

    <CheckBox
        android:id="@+id/fRoomCreate_check_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/allerta"
        android:text="@string/title_passwordIs" />

    <EditText
        android:id="@+id/fRoomCreate_editText_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/background_login_selectbutton"
        android:backgroundTint="#ffffff"
        android:ems="10"
        android:fontFamily="@font/allerta"
        android:hint="@string/type_roomPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="8"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp" />

    <com.hiro_a.naruko.view.CustomButton
        android:id="@+id/fRoomCreate_view_roomCreate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background_login_button"
        android:backgroundTint="#808080"
        android:gravity="center_vertical"
        android:text="@string/createRoom"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>