<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fLoginEmail_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/fLoginEmail_editText_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/background_login_selectbutton"
        android:backgroundTint="#ffffff"
        android:ems="10"
        android:fontFamily="@font/allerta"
        android:hint="@string/type_email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/fLoginEmail_editText_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/background_login_selectbutton"
        android:backgroundTint="#ffffff"
        android:ems="10"
        android:fontFamily="@font/allerta"
        android:hint="@string/type_password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:importantForAutofill="no" />

    <LinearLayout
        android:id="@+id/fLoginEmail_layout_saveLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/fLoginEmail_check_saveLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/title_saveLogin" />
    </LinearLayout>

    <com.hiro_a.naruko.view.CustomButton
        android:id="@+id/fLoginEmail_view_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background_login_button"
        android:backgroundTint="#FF6600"
        android:gravity="center_vertical"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>