<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemRoomSearch_layout_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/itemRoomSearch_imageView_roomImage"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:src="@drawable/ic_launcher_background"
        app:civ_border_color="#FFFFFF"
        app:civ_border_width="2dp" />

    <LinearLayout
        android:id="@+id/itemRoomSearch_layout_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemRoomSearch_textView_topDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/allerta"
            android:text="@string/sample_text"
            android:textColor="#8F000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemRoomSearch_textView_bottomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/room_created" />

            <TextView
                android:id="@+id/itemRoomSearch_textView_bottomDetail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/allerta"
                android:maxLines="1"
                android:text="@string/sample_text" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/itemRoomSearch_imageView_option"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/option_image"
        app:srcCompat="@drawable/ic_baseline_more_horiz_24" />

</LinearLayout>