<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profileEdit_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/profileEdit_layout_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorYuuna"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/profileEdit_imageView_editColor"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/color_image"
            app:srcCompat="@drawable/ic_baseline_colorize_24" />

        <FrameLayout
            android:id="@+id/profileEdit_layout_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileEdit_imageView_userImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_launcher_background"
                app:civ_border_color="#FFFFFF"
                app:civ_border_width="4dp" />

            <ImageView
                android:id="@+id/profileEdit_imageView_editImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom|end"
                android:contentDescription="@string/edit_image"
                android:tint="#5F5F5F"
                app:srcCompat="@drawable/ic_perm_media_black_24dp" />
        </FrameLayout>

    </FrameLayout>

    <EditText
        android:id="@+id/profileEdit_editText_userName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/type_userName"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorLink="@color/colorPrimary" />

</LinearLayout>