<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginSelect_layout_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ActivitySelectLogin">

    <com.hiro_a.naruko.view.BackgroundView
        android:id="@+id/loginSelect_view_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/image_background_yuuna" />

    <LinearLayout
        android:id="@+id/loginSelect_layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/loginSelect_imageView_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="75dp"
            android:contentDescription="@string/logo_image"
            android:gravity="center_vertical"
            android:src="@mipmap/ic_launcher_foreground"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/loginSelect_textView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/allerta"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/loginSelect_textView_infomation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/now_loading_update"
            android:textAlignment="center" />

        <LinearLayout
            android:id="@+id/loginSelect_layout_fragmentContainter_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/loginSelect_textView_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:text="@string/version"
        android:textColor="#000000"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/loginSelect_layout_fragmentContainter_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </LinearLayout>

</FrameLayout>